@@ -12,11 +12,17 @@
   Functions to save the current plot in an \R variable, and to replay it.
 }
 \usage{
-recordPlot()
-replayPlot(x)
+recordPlot(load=NULL, attach=NULL)
+replayPlot(x, reloadPkgs=FALSE)
 }
 \arguments{
- \item{x}{A saved plot.}
+  \item{load}{If not \code{NULL}, a character vector of package names,
+    which are saved as part of the recorded plot.}
+  \item{attach}{If not \code{NULL}, a character vector of package names,
+    which are saved as part of the recorded plot.}
+  \item{x}{A saved plot.}
+  \item{reloadPkgs}{A logical indicating whether to reload and/or
+    reattach any packages that were saved as part of the recorded plot.}
 }
 \details{
   These functions record and replay the displaylist of the current
@@ -46,8 +52,15 @@ replayPlot(x)
   \code{\link{recordGraphics}} which in turn contains an expression
   that calls code from a non-base package other than \pkg{graphics}
   or \pkg{grid}.  The most well-known example of this is a plot
-  drawn with the package \pkg{ggplot2}.  The solution is to load
+  drawn with the package \pkg{ggplot2}.  One solution is to load
   the relevant package(s) before replaying the recorded plot.
+  The \code{load} and \code{attach} arguments to \code{recordPlot}
+  can be used to automate this - any packages named in \code{load}
+  will be reloaded, via \code{\link{loadNamespace}}, and any packages
+  named in \code{attach} will be reattached, via \code{\link{library}},
+  as long as \code{reloadPkgs} is \code{TRUE} in the call to
+  \code{replayPlot}.  This is only relevant when attempting to
+  replay in one R session a plot that was recorded in a different R session.
 }
 \value{
   \code{recordPlot} returns an object of class \code{"recordedplot"}.
